Fix spacing of the mage ability. Run rake db:reset.

--- a/app/assets/stylesheets/mages.scss
+++ b/app/assets/stylesheets/mages.scss
@@ -1,3 +1,6 @@
 // Place all the styles related to the Mages controller here.
 // They will automatically be included in application.css.
 // You can use Sass (SCSS) here: http://sass-lang.com/
+.mage-ability {
+  white-space: pre-line;
+}
