--- a/app/assets/stylesheets/randomizer.scss
+++ b/app/assets/stylesheets/randomizer.scss
@@ -125,6 +125,7 @@ h2 {
 }
 
 .randomizer-mage-ability {
+  white-space: pre-line;
   margin-left: 10px;
 }
 
